--- a/style.css
+++ b/style.css
@@ -1,53 +1,114 @@
+/* cdn link for google font */
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Spartan", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Spartan", sans-serif;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 /* Global Styles */
 
 h1 {
-  font-size: 50px;
-  line-height: 64px;
-  color: #222;
+    font-size: 50px;
+    line-height: 64px;
+    color: #222;
 }
 
 h2 {
-  font-size: 46px;
-  line-height: 54px;
-  color: #222;
+    font-size: 46px;
+    line-height: 54px;
+    color: #222;
 }
 
 h4 {
-  font-size: 20px;
-  color: #222;
+    font-size: 20px;
+    color: #222;
 }
 
 h6 {
-  font-weight: 700;
-  font-size: 12px;
+    font-weight: 700;
+    font-size: 12px;
 }
 
 p {
-  font-size: 16px;
-  color: #465b52;
-  margin: 15px 0 20px 0;
-}
-
-.section-p1 {
-  padding: 40px 80px;
-}
-
-.section-m1 {
-  margin: 40px 0;
+    font-size: 16px;
+    color: #465b52;
+    margin: 15px 0 20px 0;
 }
 
 body {
-  width: 100%;
+    width: 100%;
 }
+
+/* Header styles for Navbar */
+
+#header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 80px;
+    background: #e3e6f3;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+#header .logo {
+    text-decoration: none;
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    color: #1a1a1a;
+    letter-spacing: 2px;
+    transition: color 0.3s ease;
+    text-shadow: 2px 2px 4px rgba(43, 41, 41, 0.5);
+}
+
+#header .logo:hover {
+    color: #088178;
+}
+
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#navbar li {
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+}
+
+#navbar li a {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 16px;
+    color: #1a1a1a;
+    transition: 0.3s ease;
+}
+
+#navbar li a:hover,
+#navbar li a.active {
+    color: #088178;
+}
+
+#navbar li a.active::after,
+#navbar li a:hover::after {
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #088178;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+
