--- a/style.css
+++ b/style.css
@@ -42,6 +42,16 @@ p {
     margin: 15px 0 20px 0;
 }
 
+/* Section padding */
+
+.section-p1 {
+    padding: 40px 80px;
+}
+
+.section-m1 {
+    margin: 40px 0;
+}
+
 body {
     width: 100%;
 }
@@ -144,18 +154,80 @@ body {
     cursor: pointer;
     font-weight: 700;
     font-size: 15px;
-    transition: all 0.3s ease; 
+    transition: all 0.3s ease;
     position: relative;
     overflow: hidden;
 }
 
 /* Button hover effect */
 #hero button:hover {
-    background-color: #1fa599; /* Change button color on hover */
-    transform: scale(1.05); /* Scale up the button on hover */
+    background-color: #1fa599;
+    /* Change button color on hover */
+    transform: scale(1.05);
+    /* Scale up the button on hover */
 }
 
 /* Button arrow icon hover effect */
 #hero button:hover::after {
-    right: 40px; /* Move the arrow icon to the right on hover */
+    right: 40px;
+    /* Move the arrow icon to the right on hover */
+}
+
+/* Feature Section Style */
+
+#feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box {
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #cce7d0;
+    border-radius: 4px;
+    margin: 15px 0;
+ 
+}
+
+#feature .fe-box:hover {
+    box-shadow: 10px 10px 54px rgba(70, 0, 0, 0.06);
+}
+
+#feature .fe-box img {
+    width: 100%;
+    height: 130px;
+    margin-bottom: 10px;
+}
+
+#feature .fe-box h6 {
+    display: inline-block;
+    padding: 10px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #fddde4;
+}
+
+#feature .fe-box:nth-child(2) h6 {
+    background-color: #cdebbc;
+}
+
+#feature .fe-box:nth-child(3) h6 {
+    background-color: #d1e8f2;
+}
+
+#feature .fe-box:nth-child(4) h6 {
+    background-color: #cdd4f8;
+}
+
+#feature .fe-box:nth-child(5) h6 {
+    background-color: #f6dbf6;
+}
+
+#feature .fe-box:nth-child(6) h6 {
+    background-color: #fff2e5;
 }
