add banner section and style it also add global Buttone Style

--- a/style.css
+++ b/style.css
@@ -52,6 +52,31 @@ p {
     margin: 40px 0;
 }
 
+/* Globle button Style */
+
+button.normal {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 15px 30px;
+    color: #000;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
+button.white {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid #fff;
+    outline: none;
+    transition: 0.2s;
+}
+
 body {
     width: 100%;
 }
@@ -308,4 +333,39 @@ body {
     position: absolute;
     bottom: 20px;
     right: 10px;
+}
+
+/* Banner Section Style */
+
+#banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url("/img/banner/b2.jpg");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+
+#banner h4 {
+    color: #fff;
+    font-size: 16px;
+}
+
+#banner h2 {
+    color: #fff;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner h2 span {
+    color: #ef3636;
+}
+
+#banner button:hover {
+    background-color: #088178;
+    color: #fff;
 }
