add small 3 Text Banner and style of small 3 banner.

--- a/style.css
+++ b/style.css
@@ -418,3 +418,47 @@ body {
     background-color: #088178;
     border: 1px solid #088178;
 }
+
+/* Small 3 Text Banner */
+
+#banner3 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+}
+
+#banner3 .banner-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("/img/banner/b7.jpg");
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+
+#banner3 .banner-box2 {
+    background-image: url("/img/banner/b4.jpg");
+}
+
+#banner3 .banner-box3 {
+    background-image: url("/img/banner/b18.jpg");
+}
+
+#banner3 h2 {
+    color: #fff;
+    font-size: 22px;
+    font-weight: 900;
+}
+
+#banner3 h3 {
+    color: rgb(187, 39, 39);
+    font-size: 15px;
+    font-weight: 800;
+}
