add css for small screen mobile device

--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ body {
 
 #feature .fe-box img {
     width: 100%;
-    height: 130px;
+    /* height: 130px; */
     margin-bottom: 10px;
 }
 
@@ -722,6 +722,100 @@ footer .copyright {
 
     #newsletter .form {
         width: 70%;
+    }
+
+}
+
+
+/* for small size screen mobile device */
+
+@media (min-width: 477px) {
+    .section-p1 {
+        padding: 20px;
+    }
+
+    #header {
+        padding: 10px 30px;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        font-size: 32px;
+    }
+
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+
+    /* feature section */
+
+    #feature {
+        justify-content: space-between;
+    }
+
+    #feature .fe-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+
+    /* product section */
+    #Product1 .pro {
+        width: 100%;
+    }
+
+    /* banner section */
+    #banner {
+        height: 40vh;
+    }
+
+    /* fix small banner section */
+
+    #sm-banner .banner-box {
+        height: 40vh;
+    }
+
+    #sm-banner .banner-box2 {
+        margin-top: 20px;
+    }
+
+    #banner3 {
+        padding: 0 20px;
+    }
+
+    #banner3 .banner-box {
+        width:100%;
+    }
+
+    /* news letter */
+    #newsletter {
+        padding: 40px 20px;
+    }
+
+    #newsletter .form {
+        width: 100%;
+    }
+
+    footer .copyright {
+        text-align: start;
+    }
+
+    /* Single product page */
+    #prodetails {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #prodetails .single-pro-image {
+        width: 100%;
+        margin-right: 0px;
+    }
+
+    #prodetails .single-pro-details {
+        width: 100%;
     }
 
 }
