add single product page , add single product description and give it commont that 1 product have 4 same type of sample or different color make it shope page to onclick commond and give it responsive style for all devices .

--- a/style.css
+++ b/style.css
@@ -646,8 +646,70 @@ p {
     font-weight: 600;
 }
 
+/* single product page section */
 
+#prodetails {
+    display: flex;
+    margin-top: 15px;
+}
 
+#prodetails .single-pro-image {
+    width: 40%;
+    margin-right: 50px;
+}
+
+.small-img-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col {
+    flex-basis: 24%;
+    cursor: pointer;
+
+}
+
+#prodetails .single-pro-details {
+    width: 50%;
+    padding-top: 30px;
+
+}
+
+#prodetails .single-pro-details h4 {
+    padding: 40px 0 20px 0;
+}
+
+#prodetails .single-pro-details h2 {
+    font-size: 26px;
+}
+
+#prodetails .single-pro-details select {
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input {
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+
+}
+
+#prodetails .single-pro-details input:focus {
+    outline: none;
+}
+
+#prodetails .single-pro-details button {
+    background-color: #088178;
+    color: #fff;
+}
+
+#prodetails .single-pro-details span {
+    line-height: 25px;
+}
 
 
 
@@ -848,5 +910,22 @@ p {
         width: 100%;
         text-align: start;
     }
+
+    /* Single product page */
+    #prodetails {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #prodetails .single-pro-image {
+        width: 100%;
+        margin-right: 0px;
+
+    }
+
+    #prodetails .single-pro-details {
+        width: 100%;
+    }
+
 
 }
