create blog.html and add style and banner for blog header

--- a/style.css
+++ b/style.css
@@ -711,6 +711,11 @@ p {
     line-height: 25px;
 }
 
+/* blog page style */
+
+#page-header.blog-header{
+    background-image: url("img/banner/b19.jpg");
+}
 
 
 /* Media Query for iPad Screen Size */
