--- a/style.css
+++ b/style.css
@@ -784,6 +784,7 @@ p {
     background-image: url("/img/about/banner.png");
 }
 
+/* About head section */
 #about-head {
     display: flex;
     align-items: center;
@@ -798,6 +799,27 @@ p {
     padding-left: 40px;
 }
 
+/* About app section */
+
+#about-app {
+    text-align: center;
+}
+
+#about-app .video {
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+
+#about-app .video video {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
 
 
 
