Give Style about page  for make responsive small screen device

--- a/style.css
+++ b/style.css
@@ -1055,5 +1055,19 @@ p {
         width: 100%;
     }
 
+    /* About page  */
+    #about-head{  
+        flex-direction: column;
+    }
+    #about-head img{  
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #about-head div{  
+      padding-left: 0;
+    }
 
+    #about-app .video{
+       width: 100%; 
+    }
 }
