add cart page style for medium and small screen device

--- a/style.css
+++ b/style.css
@@ -916,6 +916,11 @@ p {
 }
 
 /* Cart Page Style */
+
+#cart {
+    overflow-x: auto;
+}
+
 #cart table {
     width: 100%;
     border-collapse: collapse;
@@ -1000,7 +1005,7 @@ p {
 }
 
 #coupon button,
-#subtotal button{
+#subtotal button {
     background-color: #088178;
     color: #fff;
     padding: 12px 20px;
@@ -1019,7 +1024,7 @@ p {
     margin-bottom: 20px;
 }
 
-#subtotal table td{
+#subtotal table td {
     width: 50%;
     border: 1px solid #e2e9e1;
     padding: 10px;
@@ -1317,5 +1322,20 @@ p {
     #form-details form {
         width: 100%;
         margin-bottom: 30px;
+    }
+
+    /* cart page */
+
+    #cart-add {
+        flex-direction: column;
+    }
+
+    #coupon {
+        width: 100%;
+    }
+
+    #subtotal {
+        width: 100%;
+        padding: 20px;
     }
 }
